syntax = "proto3";

service LeaseSolicitationService{
    rpc LeaseSolicitation(LeaseRequest) returns (LeaseReply);
}

message Lease{
    string transactionManagerName = 1;
    repeated string dadIntsKeys = 2;
}

message LeaseRequest{
    Lease requestedLease = 1;
}

message LeaseReply{
    int32 epoch = 1;
    repeated Lease leases = 2;
}